[SA|FI] download the war only when system property 'cleanET'  is passed else use the available wars.